--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
   },
   "scripts": {
     "start": "node ./built/index.js",
-    "dtsm": "dtsm --insight false install",
+    "dts": "dtsm --insight false install",
     "build": "gulp build",
     "watch": "gulp watch",
     "lint": "gulp lint",
     "test": "gulp test"
   },
   "license": "MIT",
+  "private": true,
   "devDependencies": {
-    "dtsm": "^0.11.0",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^5.2.1",
-    "gulp-tslint": "^3.3.0",
-    "gulp-typescript": "^2.8.1",
-    "merge2": "^0.3.6",
-    "tslint": "^2.5.0",
-    "typescript": "^1.6.2",
-    "typescript-require": "^0.2.9"
-  },
-  "private": true
+    "babel-preset-es2015": "6.1.18",
+    "dtsm": "0.13.0",
+    "gulp": "3.9.0",
+    "gulp-babel": "6.1.0",
+    "gulp-tslint": "3.6.0",
+    "gulp-typescript": "2.9.2",
+    "merge2": "0.3.6",
+    "tslint": "3.0.0",
+    "typescript": "1.6.2",
+    "typescript-require": "0.2.9-1"
+  }
 }
